k8s/benchmark-app.yml
apiVersion: v1
kind: Service
metadata:
  name: benchmark-service
spec:
  type: ClusterIP
  selector:
    component: benchmark
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: benchmark-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: benchmark
  template:
    metadata:
      labels:
        component: benchmark
    spec:
      containers:
        - name: benchmark
          image: styx-benchmark-client:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 5000
