k8s/worker-app.yml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  type: NodePort
  selector:
    component: worker
  ports:
    - port: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: styx-worker:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1"
            requests:
              memory: "1000Mi"
              cpu: "1"
          ports:
            - containerPort: 8888
