k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
   nginx.ingress.kubernetes.io/proxy-body-size: 256m
spec:
 rules:
   - http:
      paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: benchmark-service
              port:
                number: 5000
